// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentSelectionAlert matches snapshot with default severity 1`] = `
<View
  style={
    {
      "backgroundColor": "#ca35421a",
      "borderColor": "#ca3542",
      "borderLeftWidth": 4,
      "borderRadius": 4,
      "flexDirection": "row",
      "padding": 12,
      "paddingLeft": 8,
    }
  }
  testID="banneralert"
>
  <View
    style={
      {
        "marginRight": 8,
      }
    }
  >
    <SvgMock
      color="#ca3542"
      fill="currentColor"
      height={24}
      name="Danger"
      style={
        {
          "height": 24,
          "width": 24,
        }
      }
      width={24}
    />
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 14,
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      Something went wrong.
    </Text>
  </View>
</View>
`;

exports[`PaymentSelectionAlert matches snapshot with warning severity 1`] = `
<View
  style={
    {
      "backgroundColor": "#9a63001a",
      "borderColor": "#9a6300",
      "borderLeftWidth": 4,
      "borderRadius": 4,
      "flexDirection": "row",
      "padding": 12,
      "paddingLeft": 8,
    }
  }
  testID="banneralert"
>
  <View
    style={
      {
        "marginRight": 8,
      }
    }
  >
    <SvgMock
      color="#9a6300"
      fill="currentColor"
      height={24}
      name="Danger"
      style={
        {
          "height": 24,
          "width": 24,
        }
      }
      width={24}
    />
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 14,
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      No payment methods are available.
    </Text>
  </View>
</View>
`;
